# opip_sem_2_lab_1

./: CMakeLists.txt  Header_2.h  Header_5.h  Header_6.h  Header_7.h  Header_8.h  functions_2.cpp  functions_6.cpp  functions_7.cpp  functions_8.cpp  generate.h  inputCheck.h  main.cpp
lab_1_clion/: CMakeLists.txt  Header.h  Header_2.h  Header_3.h  Header_4.h  functions_1.cpp  functions_2.cpp  functions_3.cpp  functions_4.cpp  functions_5.cpp  inputCheck.h  main.cpp
